Fine tuned spacing issues

--- a/index.css
+++ b/index.css
@@ -45,9 +45,10 @@ body {
     font-weight: bold;
     font-size: medium;
     border: 2px solid grey;
-    width: 15%;
+    width: 12%;
     float: left;
-    margin-left: 32%;
+    margin-left: 33%;
+    margin-top:-3%;
 }
 #button1_2{
     background-color:whitesmoke;
@@ -60,9 +61,10 @@ body {
     font-weight: bold;
     font-size: medium;
     border: 2px solid salmon;
-    width: 15%;
+    width: 12%;
     float: right;
-    margin-right: 32%;
+    margin-right: 33.5%;
+    margin-top:-3%;
 }
 #button1_1, #button1_2{
     display:inline-block;
@@ -90,6 +92,7 @@ body {
 form{
     margin-left: 35%;
     margin-right: 40%;
+    margin-top:-2%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 }
